RESOLVED FIXED54159
REGRESSION(r77974): http/tests/security/aboutBlank/security-context-window-open.html is failing
https://bugs.webkit.org/show_bug.cgi?id=54159
Summary REGRESSION(r77974): http/tests/security/aboutBlank/security-context-window-op...
Maciej Stachowiak
Reported 2011-02-09 18:35:03 PST
Ever since http://trac.webkit.org/changeset/77974, the test http/tests/security/aboutBlank/security-context-window-open.html is failing.
Attachments
Patch (8.77 KB, patch)
2011-04-11 19:01 PDT, Sam Weinig
andersca: review+
Maciej Stachowiak
Comment 1 2011-02-09 18:35:32 PST
Sam Weinig
Comment 2 2011-04-11 19:01:09 PDT
WebKit Review Bot
Comment 3 2011-04-11 19:03:10 PDT
Attachment 89145 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Tools/WebKitTestRunner/TestController.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 4 2011-04-11 19:07:57 PDT
Sam Weinig
Comment 5 2011-04-11 19:10:20 PDT
Daniel Bates
Comment 6 2011-04-11 21:57:50 PDT
(In reply to comment #4) > Attachment 89145 [details] did not build on qt: > Build output: http://queues.webkit.org/results/8393099 As prophesied by the Qt EWS bot ( :-( ), this change broke the Qt Linux Release build: <http://build.webkit.org/builders/Qt%20Linux%20Release/builds/31231/steps/compile-webkit/logs/stdio>
Daniel Bates
Comment 7 2011-04-11 21:58:21 PDT
Committed build fix for Qt Linux Release bot in changeset 83556 <http://trac.webkit.org/changeset/83556>.
Note You need to log in before you can comment on or make changes to this bug.